<resources>
    <string name="app_name">Cuddle</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="login_docs">발에서 마음까지</string>
    <string name="cuddle_originals">Cuddle Originals</string>
    <string name="view_more">더보기</string>
    <string name="image_description">이미지 설명</string>
    <string name="logo_description">로고 설명</string>
    <string name="community_title">커뮤니티</string>

    <string name="post_creation_title">글 등록</string>
    <string name="post_creation_detail">내용</string>
    <string name="post_creation_hint">세부 내용을 작성해주세요.</string>
    <string name="post_creation_complete">작성 완료</string>

    <string name="posts">게시글</string>
    <string name="days_since_joined">Cuddle 가입한 지</string>
    <string name="pets">반려동물 수</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="add_pet">반려동물을\n추가해주세요</string>

    <string name="pet_gender">성별</string>
    <string name="pet_breed">품종</string>
    <string name="pet_birthday">생일</string>
    <string name="pet_weight">몸무게</string>
    <string name="pet_neutering">중성화</string>
    <string name="pet_together">함께한 지 </string>
    <string name="pet_days"> 일째</string>

    <string name="profile_edit_title">프로필 수정</string>
    <string name="profile_register_title">프로필 등록</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="profile_bio">한줄소개</string>
    <string name="profile_bio_hint">나를 소개할 수 있는 한 줄을 적어주세요.</string>
    <string name="profile_name">이름</string>
    <string name="profile_name_hint">반려동물의 이름을 입력해주세요.</string>
    <string name="profile_birthday">생일</string>
    <string name="profile_breed">품종</string>
    <string name="profile_breed_hint">반려동물의 품종을 입력해주세요.</string>
    <string name="profile_daysTogether">입양 날짜</string>
    <string name="profile_gender">성별</string>
    <string name="profile_neutered">중성화 여부</string>
    <string name="profile_weight">몸무게</string>

    <string name="edit_done">수정완료</string>
    <string name="register">등록</string>

    <string name="profile_login_title">프로필 등록</string>
    <string name="done">완료</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">서비스 준비 중입니다.</string>
</resources>