<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.UserLoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="82dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/nps_font_bold"
                android:gravity="center"
                android:text="@string/profile_login_title"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/profile_nickname"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="*"
                    android:textColor="@color/lovely_blue"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_edit_box"
                android:fontFamily="@font/nps_font_regular"
                android:hint="@string/profile_nickname_hint"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_BDBDBD"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/profile_bio"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="*"
                    android:textColor="@color/lovely_blue"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_edit_box"
                android:fontFamily="@font/nps_font_regular"
                android:hint="@string/profile_bio_hint"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_BDBDBD"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/selector_complete_button"
                android:enabled="false"
                android:fontFamily="@font/nps_font_bold"
                android:padding="16dp"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>