<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pet"
            type="com.ssmy.cuddle.ui.main.contents.profile.model.data.Pet" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="225dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="23dp">

        <!-- Front View -->
        <RelativeLayout
            android:id="@+id/front_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_pet_card_front">

            <ImageView
                android:id="@+id/edit_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/pet_name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/pet_image"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nps_font_bold"
                android:text="@{pet.name}"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="미경이" />

            <!--            <ImageView-->
            <!--                android:id="@+id/pet_image"-->
            <!--                android:layout_width="75dp"-->
            <!--                android:layout_height="75dp"-->
            <!--                android:layout_centerInParent="true"-->
            <!--                android:background="@drawable/bg_circle"-->
            <!--                android:scaleType="centerCrop"-->
            <!--                android:src="@{pet.imageUrl}"-->
            <!--                tools:src="@drawable/sample_image1" />-->

            <View
                android:id="@+id/pet_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pet_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_together"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/days_together"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@{pet.daysTogether}"
                    android:textColor="@color/lovely_blue"
                    android:textSize="10sp"
                    tools:text="1" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_days"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Back View (Initially hidden) -->
        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_gender"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/gender"
                    android:layout_width="14dp"
                    android:layout_height="21dp"
                    app:genderIcon="@{pet.gender}"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/ic_female" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_breed"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/breed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/nps_font_bold"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@{pet.breed}"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_birthday"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/nps_font_bold"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@{pet.birthday}"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_weight"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/nps_font_bold"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@{String.valueOf(pet.weight) + ` kg`}"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/pet_neutering"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/neutering"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/nps_font_bold"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text='@{pet.isNeutered ? "O" : "X"}'
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
