<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ssmy.cuddle.ui.main.home.model.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.home.HomeFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Logo and Text Area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Text Logo -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_regular"
                    android:text="@string/login_docs"
                    android:textColor="#000000"
                    android:textSize="9sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nps_font_bold"
                    android:text="@string/app_name"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!-- Image Logo -->
            <ImageView
                android:layout_width="74dp"
                android:layout_height="55dp"
                android:src="@drawable/cuddle_logo" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- White Background Container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:background="@drawable/shape_rounded_background"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingTop="32dp"
                    android:paddingEnd="20dp">

                    <!-- Title and More Button -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="13dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cuddle_originals"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_more"
                            android:textColor="@color/lovely_blue"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Horizontal Scroll List -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:clipToPadding="false"
                        tools:listitem="@layout/item_cuddle_original" />

                    <!-- Banner Box -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="14dp"
                        android:background="@color/color_a2eea5"
                        android:backgroundTintMode="src_over"
                        app:cardCornerRadius="8dp" />

                    <!-- Content -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/contentTabRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <!-- ViewPager2 for fragments -->
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/contentViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
